Fix dark mode navbar contrasting

--- a/inst/builtin/bs5/shiny/_variables.scss
+++ b/inst/builtin/bs5/shiny/_variables.scss
@@ -96,8 +96,8 @@ $border-color-dark: #495057 !default;
 $card-cap-bg: transparent !default;
 
 // Navbars
-$navbar-light-bg: $white !default;
-$bslib-page-title-bg: $white !default;
+$navbar-light-bg: rgba(var(--bs-emphasis-color-rgb), 0) !default;
+$bslib-page-title-bg: $navbar-light-bg !default;
 
 // Tables
 $table-striped-bg: rgba($primary, 0.06) !default;
